Tried mercartor projection but failed miserably